[package]
name = "gh-xplr"
description = "Explore GitHub repos using xplr via GitHub CLI"
version = "0.2.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
